# autoresearch

./: .gitignore  README.md  classification_profile.json  package.json  playwright.config.mjs  prepare.py  program.md  pyproject.toml  train.py
.codex/: MEMORY.md
classification/: __init__.py  banking77.py  eval.py  experiment.py  ollama.py  profile.py
legacy/classification-prototype/: classification_profile.json
legacy/classification-prototype/classification/: cli.py  eval.py  metrics.py  ollama.py  profile.py  retrieval.py  search.py
studio/: __init__.py  __main__.py  api.py  cli.py  events.py  models.py  orchestrator.py  storage.py
studio/data/: tiny_stories.txt
studio/static/: app.js  index.html  styles.css
studio/tasks/: __init__.py  base.py  tinystories_local.py
tests/: test_classification_banking77.py  test_classification_eval.py  test_classification_experiment.py  test_classification_ollama_smoke.py  test_prepare.py  test_studio_api.py  test_tinystories_backend.py  test_train.py
tests/ui/: studio.spec.mjs
