[project]
name = "autoresearch"
version = "0.2.0"
description = "Autonomous classification research loop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.2",
    "requests>=2.32.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires optional local services such as Ollama",
]
